--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:migrate": "npx knex migrate:latest",
     "db:undo:migration": "npx knex migrate:rollback",
     "db:create:seed": "npx knex seed:make",
-    "db:seed": "npx knex seed:run"
+    "db:seed": "npx knex seed:run",
+    "start:full": "yarn db:migrate && yarn start"
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
@@ -26,14 +27,8 @@
     "@types/cors": "2.8.7",
     "@types/ejs": "3.0.4",
     "@types/express": "4.17.7",
-    "@types/hapi__joi": "17.1.4",
-    "@types/jsonwebtoken": "8.5.0",
-    "@types/mailgun-js": "0.22.10",
     "@types/multer": "1.4.4",
     "@types/node": "14.6.0",
-    "@types/passport": "1.0.4",
-    "@types/passport-jwt": "3.0.3",
-    "@types/passport-local": "1.0.33",
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
@@ -51,29 +46,18 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "@hapi/joi": "17.1.1",
     "@types/lodash": "4.14.159",
-    "aws-sdk": "2.738.0",
-    "axios": "0.19.2",
-    "bcrypt": "5.0.0",
     "body-parser": "1.19.0",
-    "celebrate": "12.2.0",
     "config": "3.3.1",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
-    "firebase-admin": "9.1.1",
-    "jsonwebtoken": "8.5.1",
     "knex": "0.21.5",
     "lodash": "4.17.20",
-    "mailgun-js": "0.22.0",
     "multer": "1.4.2",
     "mysql2": "2.1.0",
     "objection": "2.2.3",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0",
     "uuid": "8.3.0",
     "winston": "3.3.3",
     "winston-daily-rotate-file": "4.5.0"
