--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -18,9 +18,9 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: cluster-1    # TODO: update to cluster name
-  GKE_ZONE: us-central1-c   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
+  GKE_CLUSTER: devops-cluster
+  GKE_ZONE: us-central1-c
+  DEPLOYMENT_NAME: gke-api
   IMAGE: static-site
 
 jobs:
