--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -22,6 +22,7 @@ env:
   GKE_ZONE: us-central1-c
   DEPLOYMENT_NAME: gke-api
   IMAGE: static-site
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
 jobs:
   setup-build-publish-deploy:
