--- a/kustomization.yml
+++ b/kustomization.yml
@@ -12,8 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+
+secretGenerator:
+- name: mysql-pass
+  literals:
+  - password=1234
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yml
   - service.yml
+  - mysql-deployment.yml
