--- a/mysql-deployment.yml
+++ b/mysql-deployment.yml
@@ -3,21 +3,20 @@ kind: Service
 metadata:
   name: mysql
   labels:
-    app: devops
+    app: gke-test
 spec:
   ports:
     - port: 3306
   selector:
-    app: devops
+    app: gke-test
     tier: mysql
-  clusterIP: None
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
   labels:
-    app: devops
+    app: gke-test
 spec:
   accessModes:
     - ReadWriteOnce
@@ -30,18 +29,18 @@ kind: Deployment
 metadata:
   name: devops-mysql
   labels:
-    app: devops
+    app: gke-test
 spec:
   selector:
     matchLabels:
-      app: devops
+      app: gke-test
       tier: mysql
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: devops
+        app: gke-test
         tier: mysql
     spec:
       containers:
