--- a/deployment.yml
+++ b/deployment.yml
@@ -34,6 +34,23 @@ spec:
       containers:
         - name: gke-test
           image: gcr.io/PROJECT_ID/IMAGE:TAG
+          env:
+          - name: PORT
+            value: 3000
+          - name: NODE_ENV
+            value: development
+          - name: NODE_CONFIG_DIR
+            value: ./src/config
+          - name: SERVER_ADDRESS
+            value: https://www.example.com
+          - name: DB_USER
+            value: root
+          - name: DB_PASSWORD
+            value: 1234
+          - name: DB_NAME
+            value: devops
+          - name: DB_HOST
+            value: 35.193.116.249
           ports:
             - containerPort: 5000
           resources:
