--- a/deployment.yml
+++ b/deployment.yml
@@ -36,7 +36,7 @@ spec:
           image: gcr.io/PROJECT_ID/IMAGE:TAG
           env:
           - name: PORT
-            value: 3000
+            value: "3000"
           - name: NODE_ENV
             value: development
           - name: NODE_CONFIG_DIR
@@ -46,11 +46,11 @@ spec:
           - name: DB_USER
             value: root
           - name: DB_PASSWORD
-            value: 1234
+            value: "1234"
           - name: DB_NAME
             value: devops
           - name: DB_HOST
-            value: 35.193.116.249
+            value: "35.193.116.249"
           ports:
             - containerPort: 5000
           resources:
