--- a/secret.yml
+++ b/secret.yml
@@ -6,5 +6,5 @@ type: Opaque
 data:
   dbuser: cm9vdA==
   dbpassword: MTIzNA==
-  dbname: MzUuMTkzLjExNi4yNDk=
-  dbhost: ZGV2b3Bz
+  dbname: ZGV2b3Bz
+  dbhost: MzUuMTkzLjExNi4yNDk=
