--- a/kustomization.yml
+++ b/kustomization.yml
@@ -17,5 +17,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - secret.yml
+  - configmap.yml
   - deployment.yml
   - service.yml
