--- a/deployment.yml
+++ b/deployment.yml
@@ -60,8 +60,8 @@ spec:
                 key: dbname
           - name: DB_HOST
             valueFrom:
-                secretKeyRef:
-                  name: secret
+                configMapKeyRef:
+                  name: configmap
                   key: dbhost  
           ports:
             - containerPort: 5000
