--- a/deployment.yml
+++ b/deployment.yml
@@ -38,7 +38,7 @@ spec:
           - name: PORT
             value: "3000"
           - name: NODE_ENV
-            value: prod
+            value: production
           - name: NODE_CONFIG_DIR
             value: ./src/config
           - name: SERVER_ADDRESS
