--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Set up gcloud Cloud SDK environment
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
-        service_account_key: ${self:env.ACCOUNT_KEY}
-        project_id: ${self:env.PROJECT_ID}
+        service_account_key: ${env.ACCOUNT_KEY}
+        project_id: ${env.PROJECT_ID}
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
