--- a/ci/prod/deployment.yml
+++ b/ci/prod/deployment.yml
@@ -55,14 +55,14 @@ spec:
                 key: dbpassword
           - name: DB_NAME
             valueFrom:
-              secretKeyRef:
-                name: secret
-                key: dbname
+                configMapKeyRef:
+                  name: configmap
+                  key: dbname
           - name: DB_HOST
             valueFrom:
                 configMapKeyRef:
                   name: configmap
-                  key: dbhost  
+                  key: dbhost
           ports:
             - containerPort: 5000
           resources:
