--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -22,6 +22,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Tests
+      uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install
+      uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: test:unit
+
     - name: Set up gcloud Cloud SDK environment
       uses: google-github-actions/setup-gcloud@v0.2.0
       with:
