--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "db:undo:migration": "npx knex migrate:rollback",
     "db:create:seed": "npx knex seed:make",
     "db:seed": "npx knex seed:run",
-    "start:full": "yarn db:migrate && yarn start"
+    "start:full": "yarn db:migrate && yarn start",
+    "test:unit": "jest"
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
-    "@babel/core": "7.11.1",
+    "@babel/core": "^7.12.9",
     "@babel/node": "7.10.5",
     "@babel/plugin-proposal-class-properties": "7.10.4",
-    "@babel/preset-env": "7.11.0",
+    "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "7.10.4",
     "@types/bcrypt": "3.0.0",
     "@types/body-parser": "1.19.0",
@@ -32,6 +33,7 @@
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
+    "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "4.0.0",
     "cz-conventional-changelog": "3.2.0",
     "eslint": "7.7.0",
@@ -40,6 +42,7 @@
     "eslint-import-resolver-babel-module": "5.1.2",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-prettier": "3.1.4",
+    "jest": "^26.6.3",
     "nodemon": "2.0.4",
     "prettier": "2.0.5",
     "ts-node": "8.10.2",
